--- a/bvgc_sinatra/views/home.erb
+++ b/bvgc_sinatra/views/home.erb
@@ -19,7 +19,6 @@
     <div class="background-container container">
         <div class="container separator-container">
             <div class="main-container">
-      <!-- Example row of columns -->
                 <div class="row">
                     <div class="col-md-12">
                         <h2>About Us</h2>
@@ -47,6 +46,62 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
+                        <h2>Aultimas Showdown</h2>
+                        <p>I don't have any idea what cody wants to be on this part of the page</p>
+                        <p>I will probably let him figure it out</p>
+                        <p>Check out some of the pictures from the inaugurial Aultimas Showdown down below</p>
+                        <div id="AultimasCarousel" class="carousel slide" data-ride="carousel">
+                            <ol class="carousel-indicators">
+                                <li data-target="#AultimasCarousel" data-slide-to="0" class="active"></li>
+                                <li data-target="#AultimasCarousel" data-slide-to="1"></li>
+                                <li data-target="#AultimasCarousel" data-slide-to="2"></li>
+                                <li data-target="#AultimasCarousel" data-slide-to="3"></li>
+                                <li data-target="#AultimasCarousel" data-slide-to="4"></li>
+                                <li data-target="#AultimasCarousel" data-slide-to="5"></li>
+                                <li data-target="#AultimasCarousel" data-slide-to="6"></li>
+                                <li data-target="#AultimasCarousel" data-slide-to="7"></li>
+                                <li data-target="#AultimasCarousel" data-slide-to="8"></li>
+                            </ol>
+                            <div class="carousel-inner" role="listbox">
+                                <div class="item active">
+                                    <img class="first-slide" src="/images/DUO-1.jpg" alt="Duo 1"/>
+                                </div>
+                                <div class="item">
+                                    <img class="second-slide" src="/images/Cody-1.jpg" alt="Cody 1"/>
+                                </div>
+                                <div class="item">
+                                    <img class="third-slide" src="/images/3 guys.jpg" alt="3 Guys"/>
+                                </div>
+                                <div class="item">
+                                    <img class="fourth-slide" src="/images/3 in a line.jpg" alt="3 in a line"/>
+                                </div>
+                                <div class="item">
+                                    <img class="fifth-slide" src="/images/group-1.jpg" alt="Group 1"/>
+                                </div>
+                                <div class="item">
+                                    <img class="sixth-slide" src="/images/whole room.jpg" alt="Whole Room"/>
+                                </div>
+                                <div class="item">
+                                    <img class="seventh-slide" src="/images/whole room 2.jpg" alt="Whole Room 2"/>
+                                </div>
+                                <div class="item">
+                                    <img class="eighth-slide" src="/images/group stare.jpg" alt="Group Stare"/>
+                                </div>
+                                <div class="item">
+                                    <img class="ninth-slide" src="/images/other line.jpg" alt="Other Line"/>
+                                </div>
+                            </div>
+                            <a class="left carousel-control" href="#AultimasCarousel" role="button" data-slide="prev">
+                                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="right carousel-control" href="#AultimasCarousel" role="button" data-slide="next">
+                                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                <div class="row">
+                    <div class="col-md-12">
                         <h2>Contact Us</h2>
                         <p>Address: 2398 N High Street, Columbus, OH 43202</p>
                         <p><a href="https://www.facebook.com/Buckeye-Video-Game-Connection-105855226423157/"><img src="/images/FB-FindUsonFacebook-online-100.png"/></a></p>
@@ -62,6 +117,11 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script>
+    $(function(){
+        $('#AultimasCarousel').carousel();
+    });
+    </script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
