--- a/bvgc_sinatra/views/home.erb
+++ b/bvgc_sinatra/views/home.erb
@@ -9,107 +9,112 @@
 </nav>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
+    <div class="jumbotron my-jumbo">
       <div class="container text-center">
         <h1>Buckeye Video Game Connections</h1>
-        <p>Buckeye Video Game Connections is your one stop shop for video games and placeholder text</p>
+        <p>Your campus game shop</p>
       </div>
     </div>
 
-    <div class="background-container container">
-        <div class="container separator-container">
-            <div class="main-container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <h2>About Us</h2>
-                        <p>This is where you get to see some fabulous placeholder text</p>
-                    </div>
+    <div id="whole-page-wrapper">
+        <div class="background table-element" id="left-background-image"></div>
+        <div class="buffer table-element"></div>
+        <div class="content table-element">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>About Us</h2>
+                    <p></p>
                 </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <h2>Tournaments</h2>
-                        <p>We love games and we love community, so we started hosting tournaments! We host tournaments for Super Smash Brothers 4 as well as Project M every Friday and Saturday. Come play to win prizes or just for fun! You can bring your own controller or we can supply you with one. The best part is that if there is a game that you want to see in a tournament, let our staff know, and it might become another weekly tournament!</p>
-                        <h3>Tournaments:</h3><ul>
-                            <li>Project M:<ul>
-                                    <li>Fridays from 6pm to 8pm</li>
-                                    <li>Entry Fee: $5</li>
-                                </ul>
-                            </li>
-                            <li>Smash 4:<ul>
-                                    <li>Saturdays from 4pm to 8pm</li>
-                                    <li>Entry Fee: $5</li>
-                                </ul>
-                            </li>
-                        </ul>
-                        <!-- add a list of the games and times and whatnot -->
-                    </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>Tournaments</h2>
+                    <p>We love games and we love community, so we started hosting tournaments! We host tournaments for Super Smash Brothers 4 as well as Project M every Friday and Saturday. Come play to win prizes or just for fun! You can bring your own controller or we can supply you with one. The best part is that if there is a game that you want to see in a tournament, let our staff know, and it might become another weekly tournament!</p>
+                    <h3>Tournaments:</h3><ul>
+                        <li>Project M:<ul>
+                                <li>Fridays from 6pm to 8pm</li>
+                                <li>Entry Fee: $5</li>
+                            </ul>
+                        </li>
+                        <li>Smash 4:<ul>
+                                <li>Saturdays from 4pm to 8pm</li>
+                                <li>Entry Fee: $5</li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <!-- add a list of the games and times and whatnot -->
                 </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <h2>Aultimas Showdown</h2>
-                        <p>I don't have any idea what cody wants to be on this part of the page</p>
-                        <p>I will probably let him figure it out</p>
-                        <p>Check out some of the pictures from the inaugurial Aultimas Showdown down below</p>
-                        <div id="AultimasCarousel" class="carousel slide" data-ride="carousel">
-                            <ol class="carousel-indicators">
-                                <li data-target="#AultimasCarousel" data-slide-to="0" class="active"></li>
-                                <li data-target="#AultimasCarousel" data-slide-to="1"></li>
-                                <li data-target="#AultimasCarousel" data-slide-to="2"></li>
-                                <li data-target="#AultimasCarousel" data-slide-to="3"></li>
-                                <li data-target="#AultimasCarousel" data-slide-to="4"></li>
-                                <li data-target="#AultimasCarousel" data-slide-to="5"></li>
-                                <li data-target="#AultimasCarousel" data-slide-to="6"></li>
-                                <li data-target="#AultimasCarousel" data-slide-to="7"></li>
-                                <li data-target="#AultimasCarousel" data-slide-to="8"></li>
-                            </ol>
-                            <div class="carousel-inner" role="listbox">
-                                <div class="item active">
-                                    <img class="first-slide" src="/images/DUO-1.jpg" alt="Duo 1"/>
-                                </div>
-                                <div class="item">
-                                    <img class="second-slide" src="/images/Cody-1.jpg" alt="Cody 1"/>
-                                </div>
-                                <div class="item">
-                                    <img class="third-slide" src="/images/3 guys.jpg" alt="3 Guys"/>
-                                </div>
-                                <div class="item">
-                                    <img class="fourth-slide" src="/images/3 in a line.jpg" alt="3 in a line"/>
-                                </div>
-                                <div class="item">
-                                    <img class="fifth-slide" src="/images/group-1.jpg" alt="Group 1"/>
-                                </div>
-                                <div class="item">
-                                    <img class="sixth-slide" src="/images/whole room.jpg" alt="Whole Room"/>
-                                </div>
-                                <div class="item">
-                                    <img class="seventh-slide" src="/images/whole room 2.jpg" alt="Whole Room 2"/>
-                                </div>
-                                <div class="item">
-                                    <img class="eighth-slide" src="/images/group stare.jpg" alt="Group Stare"/>
-                                </div>
-                                <div class="item">
-                                    <img class="ninth-slide" src="/images/other line.jpg" alt="Other Line"/>
-                                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>Aultimas Showdown</h2>
+                    <p>I don't have any idea what cody wants to be on this part of the page</p>
+                    <p>I will probably let him figure it out</p>
+                    <p>Check out some of the pictures from the inaugurial Aultimas Showdown down below</p>
+                    <div id="AultimasCarousel" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#AultimasCarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#AultimasCarousel" data-slide-to="1"></li>
+                            <li data-target="#AultimasCarousel" data-slide-to="2"></li>
+                            <li data-target="#AultimasCarousel" data-slide-to="3"></li>
+                            <li data-target="#AultimasCarousel" data-slide-to="4"></li>
+                            <li data-target="#AultimasCarousel" data-slide-to="5"></li>
+                            <li data-target="#AultimasCarousel" data-slide-to="6"></li>
+                            <li data-target="#AultimasCarousel" data-slide-to="7"></li>
+                            <li data-target="#AultimasCarousel" data-slide-to="8"></li>
+                        </ol>
+                        <div class="carousel-inner" role="listbox">
+                            <div class="item active">
+                                <img class="first-slide" src="/images/DUO-1.jpg" alt="Duo 1"/>
                             </div>
-                            <a class="left carousel-control" href="#AultimasCarousel" role="button" data-slide="prev">
-                                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                                <span class="sr-only">Previous</span>
-                            </a>
-                            <a class="right carousel-control" href="#AultimasCarousel" role="button" data-slide="next">
-                                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                                <span class="sr-only">Next</span>
-                            </a>
+                            <div class="item">
+                                <img class="second-slide" src="/images/Cody-1.jpg" alt="Cody 1"/>
+                            </div>
+                            <div class="item">
+                                <img class="third-slide" src="/images/3 guys.jpg" alt="3 Guys"/>
+                            </div>
+                            <div class="item">
+                                <img class="fourth-slide" src="/images/3 in a line.jpg" alt="3 in a line"/>
+                            </div>
+                            <div class="item">
+                                <img class="fifth-slide" src="/images/group-1.jpg" alt="Group 1"/>
+                            </div>
+                            <div class="item">
+                                <img class="sixth-slide" src="/images/whole room.jpg" alt="Whole Room"/>
+                            </div>
+                            <div class="item">
+                                <img class="seventh-slide" src="/images/whole room 2.jpg" alt="Whole Room 2"/>
+                            </div>
+                            <div class="item">
+                                <img class="eighth-slide" src="/images/group stare.jpg" alt="Group Stare"/>
+                            </div>
+                            <div class="item">
+                                <img class="ninth-slide" src="/images/other line.jpg" alt="Other Line"/>
+                            </div>
                         </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <h2>Contact Us</h2>
-                        <p>Address: 2398 N High Street, Columbus, OH 43202</p>
-                        <p><a href="https://www.facebook.com/Buckeye-Video-Game-Connection-105855226423157/"><img src="/images/FB-FindUsonFacebook-online-100.png"/></a></p>
+                        <a class="left carousel-control" href="#AultimasCarousel" role="button" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#AultimasCarousel" role="button" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>Contact Us</h2>
+                    <p>Address: 2398 N High Street, Columbus, OH 43202</p>
+                    <p><a href="https://www.facebook.com/Buckeye-Video-Game-Connection-105855226423157/"><img src="/images/FB-FindUsonFacebook-online-100.png"/></a></p>
+                </div>
+            </div>
         </div>
-    </div> <!-- /container -->
+        <div class="buffer table-element"></div>
+        <div class="background table-element" id="right-background-image"></div>
+    </div>
+<!-- /container -->
 
 
     <!-- Bootstrap core JavaScript
@@ -121,6 +126,12 @@
     <script>
     $(function(){
         $('#AultimasCarousel').carousel();
+    });
+
+    $(function(){
+        var content_height = $('.content').height();
+        $('.background').height(content_height);
+        $('.buffer').height(content_height);
     });
     </script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
