--- a/bvgc_sinatra/public/css/mystyle.css
+++ b/bvgc_sinatra/public/css/mystyle.css
@@ -17,6 +17,8 @@
 .background {
 	min-height: 100%;
 	z-index: -2;
+	background-color: #bb0000;
+	width: 15%;
 }
 
 .table-element {
@@ -25,14 +27,14 @@
 
 #left-background-image{
 	width: 15%;
-	background-image: "background-left.jpg";
+	background-color: #bb0000;
 	float: left;
 }
 
 .buffer {
 	width: 5%;
 	min-height: 100%;
-	color: #bb0000;
+	background-color: #666666;
 	padding-right: 15px;
 	padding-left: 15px;
 	z-index: -1;
@@ -46,17 +48,13 @@
 	float: center right;
 }
 
+
+
 #whole-page-wrapper{
 	display:table;
 	width:100%;
 	height: 100%;
 	overflow: hidden;
-}
-
-#right-background-image{
-	width: 15%;
-	background-image: "background-right.jpg";
-	float: right;
 }
 
 .separator-container{
